# LLMRLAgent

./: .gitignore  Experiment _Tasks.md  README.md  TASKS.md  pyproject.toml  requirements.txt  run_all_baselines.sh  run_llm_comp.sh
agents/: agent.py  base_agent.py  dqn_agent.py  llm_agent.py  llm_context_agent.py  llm_memory_agent.py  ppo_agent.py  qlearning_agent.py  random_agent.py  tdlambda_agent.py
environment/: babyai_env.py  base_environment.py  env_wrappers.py  environment.py  minigrid_environment.py  test_wrappers.py
experiment_data/: Generalist_DQN_generalist.json  Generalist_DQN_generalist_EvalOn-MiniGrid-Empty-5x5-v0.json  Generalist_DQN_generalist_MiniGrid-Empty-8x8-v0.json  Generalist_PPO_generalist.json  Generalist_PPO_standard_MiniGrid-Empty-8x8-v0.json  LLMRL_Agent_Comp_MiniGrid-Empty-5x5-v0.json  LLM_Model_Comparison_MiniGrid-Empty-5x5-v0.json  LLM_Model_Comparison_MiniGrid-GoToObject-6x6-N2-v0.json  LLM_Model_Comparison_MiniGrid-MemoryS11-v0.json  LLM_Model_Comparison_config2_MiniGrid-DoorKey-5x5-v0.json  LLM_Model_Comparison_config2_MiniGrid-Empty-5x5-v0.json  LLM_Model_Comparison_config2_MiniGrid-GoToObject-6x6-N2-v0.json  LLM_Model_Comparison_config2_MiniGrid-MemoryS11-v0.json  README.txt  TEMP_DELETE_ME  test_agent_MiniGrid-Empty-5x5-v0.json  test_exp.json  test_random_agent.json
experiments/: Experiment_Plan.md  Experiment_Planning.md  LLMRL_reward_experiment.py  TODO  agent_configs.py  cumulative_reward_experiment.py  dqn_minigrid_experiment.py  generalist_minigrid.py  generalist_minigrid_PPO.py  (+12 more)
minigrid_env/: README.md  pyproject.toml
(+26 files in other folders)
